--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/c6ec162dbbbc0e270c5f73b9b939a4675be9d0c8/Python/Superstore%20Sales%20">Superstore Sales<br />
+										<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/c6ec162dbbbc0e270c5f73b9b939a4675be9d0c8/Python/Superstore%20Sales%20">Data Exploration and Cleaning of Superstore Sales<br />
 									</header>
 									<a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/c6ec162dbbbc0e270c5f73b9b939a4675be9d0c8/Python/Superstore%20Sales%20" class="image fit"><img src="images/pexels-alexander-isreb-1797428.jpg" alt="" width="200" height="400" /></a>
 									<p>This project provides an excellent opportunity to refine exploration and data cleaning techniques while utilizing Google Colab, a powerful platform for collaborative coding. Initially, the focus is on thoroughly exploring the dataset's intricacies, leveraging libraries like Scikit-learn and Matplotlib to generate summary statistics, visualize distributions, and identify outliers. This process not only ensures familiarity with the data but also visualizes a roadmap to fully leverage the dataset's capabilities.
@@ -109,7 +109,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/708b0275610782eb191c49c335c02eadd6cd960d/Excel/Bakery%20Sales%20March%202020">Bakery Sales March 2020<br />
+										<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/708b0275610782eb191c49c335c02eadd6cd960d/Excel/Bakery%20Sales%20March%202020">Analysis of Bakery Sales March 2020<br />
 									</header>
 									<a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/708b0275610782eb191c49c335c02eadd6cd960d/Excel/Bakery%20Sales%20March%202020" class="image fit"><img src="images/bread-and-pastry-shop.jpg" alt="" width="200" height="400" /></a>
 									<p>In this project, I dived into sales data from a bakery collected in 2020, using Excel's robust features for in-depth analysis. My aim was to sharpen my Excel skills by working with a manageable dataset. As such the data preprocessing and visualizations were all done through Excel.
