--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 										<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/259d3e025f5dfe211437541c64a881c8b34dd912/Python/Rock%2C%20Paper%2C%20Scissors%20Game">Rock Paper Scissors Game  <br />
 											<br />
 									</header>
-									<a href="#" class="image fit"><img src="images/pexels-photo-4472822.webp" alt="" width="200" height="400"/></a>
+									<a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/259d3e025f5dfe211437541c64a881c8b34dd912/Python/Rock%2C%20Paper%2C%20Scissors%20Game" class="image fit"><img src="images/pexels-photo-4472822.webp" alt="" width="200" height="400"/></a>
 									<p>This Python game was crafted as a practical exercise to hone my Python skills while at the same time offering an engaging gameplay experience. It's based on the classic intransitive hand game commonly played between two individuals. Just like its real-life counterpart: Rock triumphs over Scissors, Scissors defeat Paper, and Paper outwits Rock, this Python version adheres to the same rules. <p>
 										
 									<ul class="actions special">
