--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						
 							<h2><a href="#">About Me</a></h2>
 						
-							<p>Hello, world! My name is America Munoz, I am a senior graduating from National Louis University with a Bachelor of Science degree in Computer Science and Information System. As a first generation student the value of education has a profound significance in my life. My parents have instilled the phrase: knowledge is power, I hold that very dear to me and am eager to actively continue learning. Below is a collection of the projects that have contributed to my growth as a Data Analyst. In a technology changing world I'm committed to embracing every opportunity and expanding my knowledge and skills. 
+							<p>Hello, world! My name is America Munoz, I am a senior graduating from National Louis University with a Bachelor of Science degree in Computer Science and Information Systems. As a first generation student the value of education has a profound significance in my life. My parents have instilled the phrase: knowledge is power, I hold that very dear to me and am eager to actively continue learning. Below is a collection of the projects that have contributed to my growth as a Data Analyst. In a technology changing world I'm committed to embracing every opportunity and expanding my knowledge and skills. 
 							</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/2333597cf0e5c8bd9b2d3b5c94c249ef3d0e9325/America%20Munoz-Resume.pdf" class="button">Resume</a></li>
