--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<p>Hello, world! My name is America Munoz, I am a senior graduating from National Louis University with a Bachelor of Science degree in Computer Science and Information Systems. As a first generation student the value of education has a profound significance in my life. My parents have instilled the phrase: knowledge is power, I hold that very dear to me and am eager to actively continue learning. Below is a collection of the projects that have contributed to my growth as a Data Analyst. In a technology changing world I'm committed to embracing every opportunity and expanding my knowledge and skills. 
 							</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/2333597cf0e5c8bd9b2d3b5c94c249ef3d0e9325/America%20Munoz-Resume.pdf" class="button">Resume</a></li>
+								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/c38883f7eb87b8e3eaac1bc446634461c3a6eb9e/America%20Munoz%20-%20Resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</header>
 						<div class="image main" >
