--- a/index.html
+++ b/index.html
@@ -162,37 +162,40 @@
 
 
 						<div class="mySlides fade" >
-							<div class="numbertext">1 / 6</div>
+							<div class="numbertext">1 / 7</div>
 							<img src="images/IMG_2460.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024 </div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">2 / 6</div>
+							<div class="numbertext">2 / 7</div>
 							<img src="images/IMG_1685.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">3 / 6</div>
+							<div class="numbertext">3 / 7</div>
 							<img src="images/thumbnail_5.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">NLU Career Fair - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">4 / 6</div>
+							<div class="numbertext">4 / 7</div>
 							<img src="images/IMG_9695.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">WPI Data Science REU Symposium - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">5 / 6</div>
+							<div class="numbertext">5 / 7</div>
 							<img src="images/Resized_received_3291994024423486.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Richard Tapia Celebration of Diversity in Computing Cohort - 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">6 / 6</div>
+							<div class="numbertext">6 / 7</div>
 							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Girls Who Code Workshop - 2022</div>
 						</div>
-
-
+						<div class="mySlides fade" style="text-align: center;">
+							<div class="numbertext">7 / 7</div>
+							<img src="images/Group-pic-smaller.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Girls Who Code Workshop - 2022</div>
+						</div>
 
 							<div style="text-align:center">
 								<span class="dot" onclick="currentSlide(1)"></span>
@@ -201,6 +204,7 @@
 								<span class="dot" onclick="currentSlide(4)"></span>
 								<span class="dot" onclick="currentSlide(5)"></span>
 								<span class="dot" onclick="currentSlide(6)"></span>
+								<span class="dot" onclick="currentSlide(7)"></span>
 								
 							  </div>
 					
