--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">6 / 7</div>
-							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - 2022</div>
+							<img src="images/FED34374-BFD6-49AD-A516-916151EDF604_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Girls Who Code Workshop - July 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">7 / 7</div>
-							<img src="images/Group-pic-smaller.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - 2022</div>
+							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Girls Who Code Workshop - August 2022</div>
 						</div>
 
 							<div style="text-align:center">
