--- a/index.html
+++ b/index.html
@@ -162,38 +162,48 @@
 
 
 						<div class="mySlides fade" >
-							<div class="numbertext">1 / 7</div>
+							<div class="numbertext">1 / 9</div>
 							<img src="images/IMG_2460.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024 </div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">2 / 7</div>
+							<div class="numbertext">2 / 9</div>
 							<img src="images/IMG_1685.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">3 / 7</div>
+							<div class="numbertext">3 / 9</div>
 							<img src="images/thumbnail_5.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">NLU Career Fair - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">4 / 7</div>
+							<div class="numbertext">4 / 9</div>
 							<img src="images/IMG_9695.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">WPI Data Science REU Symposium - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">5 / 7</div>
+							<div class="numbertext">5 / 9</div>
 							<img src="images/Resized_received_3291994024423486.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Richard Tapia Celebration of Diversity in Computing Cohort - 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">6 / 7</div>
+							<div class="numbertext">6 / 9</div>
 							<img src="images/FED34374-BFD6-49AD-A516-916151EDF604_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Girls Who Code Workshop - July 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">7 / 7</div>
+							<div class="numbertext">7 / 9</div>
 							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Girls Who Code Workshop - August 2022</div>
+						</div>
+						<div class="mySlides fade" style="text-align: center;">
+							<div class="numbertext">8 / 9</div>
+							<img src="images/IMG_3212.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Girls Who Code Workshop - August 2022</div>
+						</div>
+						<div class="mySlides fade" style="text-align: center;">
+							<div class="numbertext">9 / 9</div>
+							<img src="images/IMG_3212.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Girls Who Code Workshop - August 2022</div>
 						</div>
 
@@ -205,6 +215,8 @@
 								<span class="dot" onclick="currentSlide(5)"></span>
 								<span class="dot" onclick="currentSlide(6)"></span>
 								<span class="dot" onclick="currentSlide(7)"></span>
+								<span class="dot" onclick="currentSlide(8)"></span>
+								<span class="dot" onclick="currentSlide(9)"></span>
 								
 							  </div>
 					
