--- a/index.html
+++ b/index.html
@@ -189,23 +189,24 @@
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">6 / 9</div>
 							<img src="images/FED34374-BFD6-49AD-A516-916151EDF604_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - July 2022</div>
+							<div class="text">Girls Who Code Summer Camp - July 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">7 / 9</div>
 							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - August 2022</div>
+							<div class="text">Girls Who Code Summer Camp - August 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">8 / 9</div>
-							<img src="images/IMG_3212.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - August 2022</div>
+							<img src="images/IMG_1878.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Project Presenter in NLU CSIS Symposium - April 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">9 / 9</div>
 							<img src="images/IMG_3212.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Girls Who Code Workshop - August 2022</div>
+							<div class="text">1st Place Awardee of NLU CSIS Tech Project Showcase - April 2024</div>
 						</div>
+							
 
 							<div style="text-align:center">
 								<span class="dot" onclick="currentSlide(1)"></span>
