--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">8 / 9</div>
-							<img src="images/IMG_1878.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<img src="images/3DD0987B-2111-4744-8ECC-BBBB6CC1C200_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Project Presenter in NLU CSIS Symposium - April 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
