--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">9 / 9</div>
-							<img src="images/IMG_3212.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<img src="images/E9A99FAA-047C-4B7A-B000-83C02AEA2B07_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">1st Place Awardee of NLU CSIS Tech Project Showcase - April 2024</div>
 						</div>
 							
