--- a/index.html
+++ b/index.html
@@ -161,50 +161,50 @@
 						<div class="slideshow-container" style="text-align: left;">
 
 
-						<div class="mySlides fade" >
+						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">1 / 9</div>
+							<img src="images/E9A99FAA-047C-4B7A-B000-83C02AEA2B07_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">1st Place Awardee of NLU CSIS Symposium Tech Project Showcase - April 2024</div>
+						</div>	
+						<div class="mySlides fade" style="text-align: center;">
+							<div class="numbertext">2 / 9</div>
+							<img src="images/3DD0987B-2111-4744-8ECC-BBBB6CC1C200_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
+							<div class="text">Presenting at NLU CSIS Symposium: Predicting the Survival of Passengers Aboard the Titanic - April 2024</div>
+						</div>
+						<div class="mySlides fade" >
+							<div class="numbertext">3 / 9</div>
 							<img src="images/IMG_2460.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024 </div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">2 / 9</div>
+							<div class="numbertext">4 / 9</div>
 							<img src="images/IMG_1685.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Google Site Visit - 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">3 / 9</div>
+							<div class="numbertext">5 / 9</div>
 							<img src="images/thumbnail_5.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">NLU Career Fair - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">4 / 9</div>
+							<div class="numbertext">6 / 9</div>
 							<img src="images/IMG_9695.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">WPI Data Science REU Symposium - 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">5 / 9</div>
+							<div class="numbertext">7 / 9</div>
 							<img src="images/Resized_received_3291994024423486.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Richard Tapia Celebration of Diversity in Computing Cohort - 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">6 / 9</div>
+							<div class="numbertext">8 / 9</div>
 							<img src="images/FED34374-BFD6-49AD-A516-916151EDF604_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Girls Who Code Summer Camp - July 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">7 / 9</div>
+							<div class="numbertext">9 / 9</div>
 							<img src="images/IMG_7035.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
 							<div class="text">Girls Who Code Summer Camp - August 2022</div>
-						</div>
-						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">8 / 9</div>
-							<img src="images/3DD0987B-2111-4744-8ECC-BBBB6CC1C200_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Project Presenter in NLU CSIS Symposium - April 2024</div>
-						</div>
-						<div class="mySlides fade" style="text-align: center;">
-							<div class="numbertext">9 / 9</div>
-							<img src="images/E9A99FAA-047C-4B7A-B000-83C02AEA2B07_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">1st Place Awardee of NLU CSIS Tech Project Showcase - April 2024</div>
 						</div>
 							
 
