--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">2 / 9</div>
 							<img src="images/3DD0987B-2111-4744-8ECC-BBBB6CC1C200_1_201_a.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Presenting at NLU CSIS Symposium: Predicting the Survival of Passengers Aboard the Titanic - April 2024</div>
+							<div class="text">Presented at NLU CSIS Symposium - April 2024</div>
 						</div>
 						<div class="mySlides fade" >
 							<div class="numbertext">3 / 9</div>
@@ -179,22 +179,22 @@
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">4 / 9</div>
 							<img src="images/IMG_1685.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Google Site Visit - 2024</div>
+							<div class="text">Google Site Visit - March 2024</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">5 / 9</div>
 							<img src="images/thumbnail_5.jpg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">NLU Career Fair - 2023</div>
+							<div class="text">NLU Career Fair - September 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">6 / 9</div>
 							<img src="images/IMG_9695.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">WPI Data Science REU Symposium - 2023</div>
+							<div class="text">Presented at WPI Data Science REU Symposium  - August 2023</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">7 / 9</div>
 							<img src="images/Resized_received_3291994024423486.jpeg" style="display: block; margin: 0 auto; width: 60%; height: auto;">
-							<div class="text">Richard Tapia Celebration of Diversity in Computing Cohort - 2022</div>
+							<div class="text">Richard Tapia Celebration of Diversity in Computing Cohort - September 2022</div>
 						</div>
 						<div class="mySlides fade" style="text-align: center;">
 							<div class="numbertext">8 / 9</div>
