--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<p>Hello, world! My name is America Munoz, I am a senior graduating from National Louis University with a Bachelor of Science degree in Computer Science and Information Systems. As a first generation student the value of education has a profound significance in my life. My parents have instilled the phrase: knowledge is power, I hold that very dear to me and am eager to actively continue learning. Below is a collection of the projects that have contributed to my growth as a Data Analyst. In a technology changing world I'm committed to embracing every opportunity and expanding my knowledge and skills. 
 							</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/f14f55187f618b0e6bf231fc9bf397532936b7c8/America%20Munoz%20-%20Resume%20%20%20.pdf" class="button">Resume</a></li>
+								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/7983a41b4850827a23da38fe366b30a4d9698a78/America%20Munoz%20-%20Resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</header>
 						<div class="image main" >
