--- a/index.html
+++ b/index.html
@@ -253,9 +253,12 @@
 						}
 					</script>
 
+					</article>
 					<header style="font-size: 24px; font-weight: bold; text-align: center;">
 						PROJECTS
 					</header>
+				</article>
+
 
 					<!-- Featured Post -->
 					<article class="posts" style="display: grid; grid-template-columns: 1fr; grid-template-rows: auto auto;"></article>
@@ -358,8 +361,22 @@
 									</ul>
 								</article>
 							</section>
-
+							<article>
+							<header style="font-size: 24px; font-weight: bold; text-align: center;">
+								Certifications 
+							</header>
+							<p> Google Coursera: 
+								Ask Questions to Make Data-Driven Decisions -
+								Issued Apr 2024
+								<a href="https://www.coursera.org/account/accomplishments/verify/KQKUZNYKS99H">Credential ID: KQKUZNYKS99H</a>
+								<p>Google Coursera: 
+									Foundations: Data, Data, Everywhere -
+									Issued Jan 2024
+									<a href="https://www.coursera.org/account/accomplishments/verify/D7SSGTEPQ75G">Credential ID: D7SSGTEPQ75G</a></p>
+						</article>
 					</div>
+
+					
 
 				<!-- Footer -->
 					<footer id="footer">
