--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<p>Hello, world! My name is America Munoz, I am a senior graduating from National Louis University with a Bachelor of Science degree in Computer Science and Information Systems. As a first generation student the value of education has a profound significance in my life. My parents have instilled the phrase: knowledge is power, I hold that very dear to me and am eager to actively continue learning. Below is a collection of the projects that have contributed to my growth as a Data Analyst. In a technology changing world I'm committed to embracing every opportunity and expanding my knowledge and skills. 
 							</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/7983a41b4850827a23da38fe366b30a4d9698a78/America%20Munoz%20-%20Resume.pdf" class="button">Resume</a></li>
+								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/blob/a5a025821c44441d3fbe47f59c52ea04cf5ce5f6/Resume/America%20Munoz%20-%20Resume.pdf" class="button">Resume</a></li>
 							</ul>
 						</header>
 						<div class="image main" >
@@ -262,6 +262,20 @@
 
 					<!-- Featured Post -->
 					<article class="posts" style="display: grid; grid-template-columns: 1fr; grid-template-rows: auto auto;"></article>
+    					<header class="major">
+       						<h2><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/40884f376c31a8f75c84572c95114f18238bf2a7/Power%20BI/Superstore%20Sales%20Dashboard">Superstore Sales Dashboard</a></h2>
+							<a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/40884f376c31a8f75c84572c95114f18238bf2a7/Power%20BI/Superstore%20Sales%20Dashboard" class="image fit"><img src="images/Superstore Sales Dashboard .png" alt="" width="200" height="700"/></a>
+							<div style="flex-grow: 1;">
+								<p>
+									This interactive dashboard provides insight into key sales data collected from a Superstore in 2020. The audience intended for this dashboard is a higher-up, as the dashboard is easy to navigate and can provide important but general insights on current business processes that could require attention. 
+									<p>The first page of the dashboard provides general insights on the overall sales and profit of the superstore including the total products sold, total orders, and sales per state in the US. When the user selects a state, the bar chart on the left will indicate the total sales per product category and the performance numbers will all represent that selection. With no selection, the visuals will show the overall sales in the US. <p>
+										The second page of the dashboard shows the general sales and profit goals and how each sub-category reflects that change. The drop-down at the top of the page allows for easy category filtering. This page is beneficial to narrow in on the best and least-selling products. <p>The last page of the dashboard provides information on customer purchases including the customer segments such as if the customer is a general consumer, or is purchasing on behalf of a corporate or home office. The bar on the left shows the total orders by customer, when a customer is selected the chart on the left and the bar on the top will reflect the discounts and sales made. This page will help ensure customer service is top-tier and encourage customers to continue making purchases, in turn increasing customer satisfaction and sales.
+								</p>
+							</div>
+    						<ul class="actions special">
+								<li><a href="https://github.com/america-m/Data-Analyst-Portfolio/tree/40884f376c31a8f75c84572c95114f18238bf2a7/Power%20BI/Superstore%20Sales%20Dashboard" class="button">View Dashboard</a></li>
+							</ul>
+						</header>
     					<header class="major">
        						<h2><a href="https://emutivo.wpi.edu/">Wearable Wellness: Depression Screening via Fitbit Data Collected During COVID-19 Pandemic</a></h2>
 							<a href="https://emutivo.wpi.edu/" class="image fit"><img src="images/Untitled design.jpeg" alt="" width="100" height="400"/></a>
